--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,9 @@ services:
     ports:
       - "8080:8090"
 
+    depends_on:
+      - PostgreSQL
+
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://PostgreSQL:5432/blog_db
       - SPRING_DATASOURCE_USERNAME=postgres
